--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,6 +22,7 @@ main {
     padding: 32px 16px 16px;
     position: relative;
     color: #ffffff;
+    background: #333333;
 
     &::after {
       content: '';
