--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
             height="200"
             style="border: 0"
             allowfullscreen=""
-            loading="lazy"
+            loading="eager"
             referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
         </div>
