--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-@import "reset";
-@import "app/app.component";
-@import "app/header";
-@import "app/footer";
+@use "reset";
+@use "app/app.component";
+@use "app/header";
+@use "app/footer";
 
 body {
   margin: 0;
