fix(): 住所の更新

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -182,7 +182,7 @@
             </tr>
             <tr>
               <th>本店の所在地</th>
-              <td>東京都新宿区戸山１丁目４番１号</td>
+              <td>東京都新宿区荒木町1番地壱番館1階</td>
             </tr>
             <tr>
               <th>設立年月日</th>
